# google-calendar

./: AUTHORS  CMakeLists.txt  COPYING  INSTALL
src/: CMakeLists.txt  gcal2osync.xslt  gcalendar.c  gdata_format.c  google-data  osync2gcal.xslt  timestamp.c  timestamp.h  xslt_aux.h
